--- a/index.html
+++ b/index.html
@@ -32,5 +32,27 @@
         <img src="assets/img/menu.svg" alt="" />
       </div>
     </header>
+
+    <section
+      class="intro contianer mx-auto p-4 mt-8 flex items-center justify-between"
+    >
+      <div class="flex flex-col justify-center items-start w-1/2">
+        <h1 class="text-primary font-black text-4xl">
+          فیت <span class="text-secondry">لند</span>
+        </h1>
+        <p class="text-secondry mt-2">همراه تو در مسیر سلامتی</p>
+        <p class="text-xs text-gray-500 mt-2 leading-6">
+          بزرگترین حراج فصل فیت لند همین حالا شرع کن و محصولات با یه تخفیف شگفت
+          انگیز بخر!
+        </p>
+        <div class="flex flex-col mt-2"></div>
+        <button class="bg-secondry px-4 py-2 text-sm text-white rounded-2xl">
+          مشاهده محصولات
+        </button>
+      </div>
+      <div class="w-1/2">
+        <img src="assets/img/intro-img.png" alt="" class="w-full" />
+      </div>
+    </section>
   </body>
 </html>
